# Confer

./: Cargo.toml  README.md  cargo.toml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
client/: Cargo.toml  build.rs
client/proto/: confer.proto
client/src/: error.rs  lib.rs  main.rs
client/src/proto/: mod.rs
confer-client-example/: Cargo.toml
confer-client-example/src/: main.rs
doc/: build.md  client.md
docs/: cluster.md
learnings/: Raft_Concepts_Refresher.md  consistency_model.md  future_created_by_async_block_is_not_send.md
proto/: confer.proto
server/: Cargo.toml  build.rs
server/src/: error.rs  lib.rs  main.rs
server/src/core/: mod.rs
server/src/core/datastore/: mod.rs
server/src/core/raft/: mod.rs
server/src/proto/: mod.rs
server/src/raft/: client_responder.rs  config.rs  in_mem_network.rs.old  log_storage.rs  mod.rs  network.rs  operation.rs  raft_server.rs  state_machine.rs  storage.rs
server/src/raft/proto/: raft.proto
server/src/repository/: hashmap.rs  hashmap_tests.rs  mod.rs
server/src/service/: mod.rs  service_test.rs
server/src/state_machine/: :W  hashmap.rs  hashmap_tests.rs  mod.rs
server/src/store/: hashmap.rs  hashmap_test.rs  mod.rs
server/src/tests/: mod.rs
server/src/tests/core/: mod.rs
server/src/tests/core/datastore/: hashmap_test.rs  mod.rs
server/src/watchman/: mod.rs  watchman.rs
src/: confer.rs  main.rs
