[package]
name = "confer-client"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = {version = "0.1.17", features = ["sync"]}
tonic = { version = "0.13.0", features = ["tls-ring"]}
tracing = "0.1.41"

[build-dependencies]
tonic-build = "0.13.0"
