[package]
name = "confer-server"
version = "0.1.0"
edition = "2021"
authors = ["Vijay Anant<vijay.anantharamaiah@gmail.com.com>"]
repository = "https://github.com/vijayanant/confer"
homepage = "https://github.com/vijayanant/confer"
keywords = ["rust", "grpc", "distributed-systems", "raft", "learning"]
documentation = "https://github.com/vijayanant/confer"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.12.3"
prost = "0.13.4"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.87"
prost-types = "0.13.5"
bytes = "1.10.0"
openraft = {version = "0.9.18", features = ["serde", "storage-v2"]}
clap = "4.5.32"

[build-dependencies]
tonic-build = "0.12.3"

